--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   bubble_tab_indicator: 0.1.6
-
+  extended_nested_scroll_view: 6.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
