--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   bubble_tab_indicator: 0.1.6
   extended_nested_scroll_view: 6.0.0
+  infinite_scroll_pagination: 3.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
